Update Eddystone app

--- a/examples/peripherals/android/eddystone/app/src/main/res/values/strings.xml
+++ b/examples/peripherals/android/eddystone/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
         <item>Eddystone-UID</item>
         <item>Eddystone-TLM</item>
     </string-array>
+    <string-array name="prefixes">
+        <item>http://</item>
+        <item>https://</item>
+    </string-array>
 </resources>
